--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./build && ./node_modules/.bin/webpack --node-env production",
+    "build": "rm -rf ./build && webpack --node-env production",
     "start": "webpack serve --node-env development"
   },
   "dependencies": {
